# nimbusdns

./: CONTINUE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.test  LICENSE  README.md  SIMPLIFIED_PLAN.md.bak  docker-compose.yml  nimbus.toml
.github/workflows/: build.yml  update-oui.yml
nimbus-api/: Cargo.toml
nimbus-api/src/: auth.rs  lib.rs
nimbus-bin/: Cargo.toml
nimbus-bin/src/: main.rs
nimbus-core/: Cargo.toml
nimbus-core/data/: oui.txt
nimbus-core/src/: capabilities.rs  lib.rs  oui.rs
nimbus-core/src/blocking/: fetcher.rs  mod.rs
nimbus-core/src/config/: mod.rs
nimbus-core/src/daemon/: mod.rs
nimbus-core/src/database/: gravity.rs  mod.rs  queries.rs  schema.rs  writer.rs
nimbus-core/src/dhcp/: mod.rs
nimbus-core/src/dns/: cache.rs  dot.rs  forwarder.rs  listener.rs  mod.rs  router.rs
nimbus-core/src/logging/: mod.rs
nimbus-core/src/over_time/: mod.rs
nimbus-core/src/signals/: mod.rs
nimbus-core/tests/: dot_integration.rs
nimbus-web/: Cargo.toml
nimbus-web/src/: lib.rs
nimbus-web/static/: index.html
