[package]
name = "nimbus-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nimbus_api"
path = "src/lib.rs"

[dependencies]
nimbus-core = { path = "../nimbus-core" }
nimbus-web = { path = "../nimbus-web" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hmac.workspace = true
argon2.workspace = true
password-hash.workspace = true
base64.workspace = true
totp-rs.workspace = true
rand.workspace = true
rand_core.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
toml.workspace = true
itertools.workspace = true
futures-util.workspace = true
