[package]
name = "nimbus-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nimbus_core"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
hickory-proto.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
clap.workspace = true
signal-hook.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
regex.workspace = true
reqwest.workspace = true
itertools.workspace = true
url.workspace = true
hostname.workspace = true
bytes.workspace = true
socket2.workspace = true
futures-util.workspace = true
dhcproto.workspace = true
libc.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
signal-hook-tokio = { workspace = true }

[dev-dependencies]
rcgen = "0.13"
