[package]
name = "nimbus-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nimbus_web"
path = "src/lib.rs"

[dependencies]
nimbus-core = { path = "../nimbus-core" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
rust-embed = "8"
